// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PointAccordion should match snapshot closed 1`] = `
<View
  style={
    {
      "backgroundColor": "#303030",
    }
  }
>
  <View>
    <View
      style={
        {
          "backgroundColor": "#303030",
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": false,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            [
              {
                "paddingRight": 24,
                "paddingVertical": 8,
              },
              {
                "backgroundColor": "#303030",
                "borderColor": "#ffd600",
                "borderRadius": 4,
                "borderStyle": "solid",
                "borderWidth": 1,
                "color": "#ffd600",
                "margin": 4,
                "padding": 0,
              },
            ],
          ]
        }
      >
        <View
          pointerEvents="none"
          style={
            {
              "flexDirection": "row",
              "marginVertical": 6,
            }
          }
        >
          <View
            style={
              [
                {
                  "paddingLeft": 16,
                },
                {
                  "flex": 1,
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              numberOfLines={1}
              selectable={false}
              style={
                [
                  {
                    "textAlign": "left",
                  },
                  {
                    "color": "rgba(28, 27, 31, 1)",
                    "fontFamily": "System",
                    "fontWeight": "400",
                    "letterSpacing": 0,
                  },
                  {
                    "writingDirection": "ltr",
                  },
                  [
                    {
                      "fontSize": 16,
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                    },
                    {
                      "color": "#ffd600",
                    },
                  ],
                ]
              }
            >
              <View
                style={
                  {
                    "display": "flex",
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    {
                      "marginRight": 10,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "display": "flex",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <Text
                      numberOfLines={1}
                      style={
                        {
                          "color": "#ffd600",
                          "fontSize": 30.821917808219176,
                          "fontWeight": "bold",
                          "marginRight": 5,
                          "overflow": "hidden",
                        }
                      }
                    >
                      Temper
                       (
                      pull
                      )
                    </Text>
                    <View
                      style={
                        [
                          {
                            "borderRadius": 5,
                            "height": 10,
                            "marginRight": 5,
                            "marginTop": 5,
                            "width": 10,
                          },
                          {
                            "backgroundColor": "#303030",
                          },
                        ]
                      }
                    />
                  </View>
                  <View
                    style={
                      {
                        "display": "flex",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <Text
                      numberOfLines={1}
                      style={
                        {
                          "color": "#ffd600",
                          "fontSize": 30.821917808219176,
                          "fontWeight": "bold",
                          "marginRight": 5,
                          "overflow": "hidden",
                        }
                      }
                    >
                      Truck
                       (
                      receive
                      )
                    </Text>
                    <View
                      style={
                        [
                          {
                            "borderRadius": 5,
                            "height": 10,
                            "marginRight": 5,
                            "marginTop": 5,
                            "width": 10,
                          },
                          {
                            "backgroundColor": "#303030",
                          },
                        ]
                      }
                    />
                  </View>
                </View>
                <View>
                  <Text
                    style={
                      {
                        "color": "#ffd600",
                        "fontSize": 30.821917808219176,
                        "fontWeight": "bold",
                        "marginRight": 5,
                        "overflow": "hidden",
                      }
                    }
                  >
                    2
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#ffd600",
                        "fontSize": 30.821917808219176,
                        "fontWeight": "bold",
                        "marginRight": 5,
                        "overflow": "hidden",
                      }
                    }
                  >
                    1
                  </Text>
                </View>
              </View>
            </Text>
          </View>
          <View
            style={
              [
                {
                  "marginVertical": 6,
                  "paddingLeft": 8,
                },
                undefined,
              ]
            }
          >
            <View>
              <View
                style={
                  {
                    "marginTop": -10,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "alignSelf": "flex-end",
                      "backgroundColor": "red",
                      "borderRadius": 5,
                      "height": 10,
                      "opacity": 0,
                      "width": 10,
                    }
                  }
                />
              </View>
              <View
                pointerEvents="box-none"
                style={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  accessibilityElementsHidden={true}
                  allowFontScaling={false}
                  importantForAccessibility="no-hide-descendants"
                  pointerEvents="none"
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#ffd600",
                        "fontSize": 24,
                      },
                      [
                        {
                          "lineHeight": 24,
                          "transform": [
                            {
                              "scaleX": 1,
                            },
                          ],
                        },
                        {
                          "backgroundColor": "transparent",
                        },
                      ],
                      {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  󰅀
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`PointAccordion should match snapshot open 1`] = `
<View
  style={
    {
      "backgroundColor": "#303030",
    }
  }
>
  <View>
    <View
      style={
        {
          "backgroundColor": "#303030",
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": true,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            [
              {
                "paddingRight": 24,
                "paddingVertical": 8,
              },
              {
                "backgroundColor": "#303030",
                "borderColor": "#7AC6FF",
                "borderRadius": 4,
                "borderStyle": "solid",
                "borderWidth": 1,
                "color": "#ffd600",
                "margin": 4,
                "padding": 0,
              },
            ],
          ]
        }
      >
        <View
          pointerEvents="none"
          style={
            {
              "flexDirection": "row",
              "marginVertical": 6,
            }
          }
        >
          <View
            style={
              [
                {
                  "paddingLeft": 16,
                },
                {
                  "flex": 1,
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              numberOfLines={1}
              selectable={false}
              style={
                [
                  {
                    "textAlign": "left",
                  },
                  {
                    "color": "rgba(28, 27, 31, 1)",
                    "fontFamily": "System",
                    "fontWeight": "400",
                    "letterSpacing": 0,
                  },
                  {
                    "writingDirection": "ltr",
                  },
                  [
                    {
                      "fontSize": 16,
                    },
                    {
                      "color": "rgba(103, 80, 164, 1)",
                    },
                    {
                      "color": "#ffd600",
                    },
                  ],
                ]
              }
            >
              <View
                style={
                  {
                    "display": "flex",
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    {
                      "marginRight": 10,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "display": "flex",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <Text
                      numberOfLines={1}
                      style={
                        {
                          "color": "#ffd600",
                          "fontSize": 30.821917808219176,
                          "fontWeight": "bold",
                          "marginRight": 5,
                          "overflow": "hidden",
                        }
                      }
                    >
                      Temper
                       (
                      pull
                      )
                    </Text>
                    <View
                      style={
                        [
                          {
                            "borderRadius": 5,
                            "height": 10,
                            "marginRight": 5,
                            "marginTop": 5,
                            "width": 10,
                          },
                          {
                            "backgroundColor": "#303030",
                          },
                        ]
                      }
                    />
                  </View>
                  <View
                    style={
                      {
                        "display": "flex",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <Text
                      numberOfLines={1}
                      style={
                        {
                          "color": "#ffd600",
                          "fontSize": 30.821917808219176,
                          "fontWeight": "bold",
                          "marginRight": 5,
                          "overflow": "hidden",
                        }
                      }
                    >
                      Truck
                       (
                      receive
                      )
                    </Text>
                    <View
                      style={
                        [
                          {
                            "borderRadius": 5,
                            "height": 10,
                            "marginRight": 5,
                            "marginTop": 5,
                            "width": 10,
                          },
                          {
                            "backgroundColor": "#303030",
                          },
                        ]
                      }
                    />
                  </View>
                </View>
                <View>
                  <Text
                    style={
                      {
                        "color": "#ffd600",
                        "fontSize": 30.821917808219176,
                        "fontWeight": "bold",
                        "marginRight": 5,
                        "overflow": "hidden",
                      }
                    }
                  >
                    2
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#ffd600",
                        "fontSize": 30.821917808219176,
                        "fontWeight": "bold",
                        "marginRight": 5,
                        "overflow": "hidden",
                      }
                    }
                  >
                    1
                  </Text>
                </View>
              </View>
            </Text>
          </View>
          <View
            style={
              [
                {
                  "marginVertical": 6,
                  "paddingLeft": 8,
                },
                undefined,
              ]
            }
          >
            <View>
              <View
                style={
                  {
                    "marginTop": -10,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "alignSelf": "flex-end",
                      "backgroundColor": "red",
                      "borderRadius": 5,
                      "height": 10,
                      "opacity": 0,
                      "width": 10,
                    }
                  }
                />
              </View>
              <View
                pointerEvents="box-none"
                style={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  accessibilityElementsHidden={true}
                  allowFontScaling={false}
                  importantForAccessibility="no-hide-descendants"
                  pointerEvents="none"
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#ffd600",
                        "fontSize": 24,
                      },
                      [
                        {
                          "lineHeight": 24,
                          "transform": [
                            {
                              "scaleX": 1,
                            },
                          ],
                        },
                        {
                          "backgroundColor": "transparent",
                        },
                      ],
                      {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  󰅃
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RCTScrollView
      data={
        [
          CatchAction {
            "action": {
              "actionNumber": 1,
              "actionType": "Catch",
              "comments": [],
              "playerOne": {
                "_id": "user1",
                "firstName": "First 1",
                "lastName": "Last 1",
                "username": "firstlast1",
              },
              "playerTwo": {
                "_id": "user2",
                "firstName": "First 2",
                "lastName": "Last 2",
                "username": "firstlast2",
              },
              "tags": [
                "huck",
              ],
              "teamNumber": "one",
            },
            "reporterDisplay": "Catch",
            "viewerDisplay": "First 1 Last 1 catches the disc from First 2 Last 2",
          },
          CatchAction {
            "action": {
              "actionNumber": 2,
              "actionType": "Catch",
              "comments": [],
              "playerOne": {
                "_id": "user2",
                "firstName": "First 2",
                "lastName": "Last 2",
                "username": "firstlast2",
              },
              "playerTwo": {
                "_id": "user1",
                "firstName": "First 1",
                "lastName": "Last 1",
                "username": "firstlast1",
              },
              "tags": [],
              "teamNumber": "one",
            },
            "reporterDisplay": "Catch",
            "viewerDisplay": "First 2 Last 2 catches the disc from First 1 Last 1",
          },
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={[]}
      viewabilityConfigCallbackPairs={[]}
    >
      <View>
        <View
          onFocusCapture={[Function]}
          onLayout={[Function]}
          style={null}
        >
          <View
            style={
              {
                "alignSelf": "center",
                "marginBottom": 5,
                "width": "90%",
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "backgroundColor": "#1a1a1a",
                  "borderRadius": 8,
                  "padding": 10,
                  "shadowColor": "#ebebeb",
                  "shadowRadius": 8,
                  "width": "100%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#7AC6FF",
                    "fontSize": 30.821917808219176,
                    "fontWeight": "900",
                  }
                }
              >
                Temper
              </Text>
              <View
                style={
                  {
                    "display": "flex",
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "display": "flex",
                        "flexDirection": "row",
                        "flexWrap": "wrap",
                      }
                    }
                  >
                    <View>
                      <Text
                        style={
                          {
                            "color": "#ffd600",
                            "fontSize": 30.821917808219176,
                            "fontWeight": "bold",
                          }
                        }
                      >
                        First 1 Last 1 catches the disc from First 2 Last 2
                      </Text>
                    </View>
                  </View>
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "display": "flex",
                        "flexDirection": "row",
                        "flexWrap": "wrap",
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        {
                          "backgroundColor": "#303030",
                          "borderRadius": 4,
                          "margin": 2,
                          "shadowColor": "#000",
                          "shadowOffset": {
                            "height": 0,
                            "width": 0,
                          },
                          "shadowOpacity": 0,
                          "shadowRadius": 0,
                        }
                      }
                      testID="chip-container-outer-layer"
                    >
                      <View
                        collapsable={false}
                        style={
                          {
                            "backgroundColor": "#303030",
                            "borderColor": "rgba(255, 214, 0, 0.29)",
                            "borderRadius": 4,
                            "borderStyle": "solid",
                            "borderWidth": 1,
                            "flex": undefined,
                            "flexDirection": "column",
                            "shadowColor": "#000",
                            "shadowOffset": {
                              "height": 0,
                              "width": 0,
                            },
                            "shadowOpacity": 0,
                            "shadowRadius": 0,
                          }
                        }
                        testID="chip-container"
                      >
                        <View
                          accessibilityRole="button"
                          accessibilityState={
                            {
                              "busy": undefined,
                              "checked": undefined,
                              "disabled": true,
                              "expanded": undefined,
                              "selected": false,
                            }
                          }
                          accessibilityValue={
                            {
                              "max": undefined,
                              "min": undefined,
                              "now": undefined,
                              "text": undefined,
                            }
                          }
                          accessible={true}
                          collapsable={false}
                          focusable={true}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            [
                              {
                                "overflow": "hidden",
                              },
                              [
                                {
                                  "borderRadius": 4,
                                },
                                {
                                  "width": "100%",
                                },
                              ],
                            ]
                          }
                          testID="chip"
                        >
                          <View
                            style={
                              [
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "paddingLeft": 4,
                                  "position": "relative",
                                },
                                {
                                  "paddingLeft": 0,
                                },
                                {
                                  "paddingRight": 0,
                                },
                              ]
                            }
                          >
                            <Text
                              ellipsizeMode="tail"
                              numberOfLines={1}
                              selectable={false}
                              style={
                                [
                                  {
                                    "textAlign": "left",
                                  },
                                  {
                                    "color": "rgba(28, 27, 31, 1)",
                                    "writingDirection": "ltr",
                                  },
                                  [
                                    {
                                      "fontFamily": "System",
                                      "fontSize": 14,
                                      "fontWeight": "500",
                                      "letterSpacing": 0.1,
                                      "lineHeight": 20,
                                    },
                                    [
                                      {
                                        "marginVertical": 6,
                                        "textAlignVertical": "center",
                                      },
                                      {
                                        "color": "#ffd600",
                                        "fontFamily": "System",
                                        "fontSize": 14,
                                        "fontWeight": "500",
                                        "letterSpacing": 0.1,
                                        "lineHeight": 20,
                                      },
                                      {
                                        "marginLeft": 16,
                                        "marginRight": 16,
                                      },
                                      undefined,
                                    ],
                                  ],
                                ]
                              }
                            >
                              huck
                            </Text>
                          </View>
                        </View>
                      </View>
                    </View>
                    <View
                      collapsable={false}
                      style={
                        {
                          "backgroundColor": "transparent",
                          "borderRadius": 15.5,
                          "height": 31,
                          "margin": 6,
                          "shadowColor": "#000",
                          "shadowOffset": {
                            "height": 0,
                            "width": 0,
                          },
                          "shadowOpacity": 0,
                          "shadowRadius": 0,
                          "width": 31,
                        }
                      }
                      testID="icon-button-container-outer-layer"
                    >
                      <View
                        collapsable={false}
                        style={
                          {
                            "backgroundColor": "transparent",
                            "borderColor": "rgba(121, 116, 126, 1)",
                            "borderRadius": 15.5,
                            "borderWidth": 0,
                            "elevation": 0,
                            "flex": 1,
                            "overflow": "hidden",
                            "shadowColor": "#000",
                            "shadowOffset": {
                              "height": 0,
                              "width": 0,
                            },
                            "shadowOpacity": 0,
                            "shadowRadius": 0,
                          }
                        }
                        testID="icon-button-container"
                      >
                        <View
                          accessibilityComponentType="button"
                          accessibilityRole="button"
                          accessibilityState={
                            {
                              "busy": undefined,
                              "checked": undefined,
                              "disabled": true,
                              "expanded": undefined,
                              "selected": undefined,
                            }
                          }
                          accessibilityTraits="button"
                          accessibilityValue={
                            {
                              "max": undefined,
                              "min": undefined,
                              "now": undefined,
                              "text": undefined,
                            }
                          }
                          accessible={true}
                          centered={true}
                          collapsable={false}
                          focusable={true}
                          hitSlop={
                            {
                              "bottom": 6,
                              "left": 6,
                              "right": 6,
                              "top": 6,
                            }
                          }
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            [
                              {
                                "overflow": "hidden",
                              },
                              [
                                {
                                  "alignItems": "center",
                                  "flexGrow": 1,
                                  "justifyContent": "center",
                                },
                                {
                                  "borderRadius": 15.5,
                                },
                              ],
                            ]
                          }
                          testID="icon-button"
                        >
                          <Text
                            accessibilityElementsHidden={true}
                            allowFontScaling={false}
                            importantForAccessibility="no-hide-descendants"
                            pointerEvents="none"
                            selectable={false}
                            style={
                              [
                                {
                                  "color": "#ffd600",
                                  "fontSize": 15,
                                },
                                [
                                  {
                                    "lineHeight": 15,
                                    "transform": [
                                      {
                                        "scaleX": 1,
                                      },
                                    ],
                                  },
                                  {
                                    "backgroundColor": "transparent",
                                  },
                                ],
                                {
                                  "fontFamily": "Material Design Icons",
                                  "fontStyle": "normal",
                                  "fontWeight": "normal",
                                },
                                {},
                              ]
                            }
                          >
                            󰆉
                          </Text>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          onFocusCapture={[Function]}
          onLayout={[Function]}
          style={null}
        >
          <View
            style={
              {
                "alignSelf": "center",
                "marginBottom": 5,
                "width": "90%",
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "backgroundColor": "#1a1a1a",
                  "borderRadius": 8,
                  "padding": 10,
                  "shadowColor": "#ebebeb",
                  "shadowRadius": 8,
                  "width": "100%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#7AC6FF",
                    "fontSize": 30.821917808219176,
                    "fontWeight": "900",
                  }
                }
              >
                Temper
              </Text>
              <View
                style={
                  {
                    "display": "flex",
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "display": "flex",
                        "flexDirection": "row",
                        "flexWrap": "wrap",
                      }
                    }
                  >
                    <View>
                      <Text
                        style={
                          {
                            "color": "#ffd600",
                            "fontSize": 30.821917808219176,
                            "fontWeight": "bold",
                          }
                        }
                      >
                        First 2 Last 2 catches the disc from First 1 Last 1
                      </Text>
                    </View>
                  </View>
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "display": "flex",
                        "flexDirection": "row",
                        "flexWrap": "wrap",
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        {
                          "backgroundColor": "transparent",
                          "borderRadius": 15.5,
                          "height": 31,
                          "margin": 6,
                          "shadowColor": "#000",
                          "shadowOffset": {
                            "height": 0,
                            "width": 0,
                          },
                          "shadowOpacity": 0,
                          "shadowRadius": 0,
                          "width": 31,
                        }
                      }
                      testID="icon-button-container-outer-layer"
                    >
                      <View
                        collapsable={false}
                        style={
                          {
                            "backgroundColor": "transparent",
                            "borderColor": "rgba(121, 116, 126, 1)",
                            "borderRadius": 15.5,
                            "borderWidth": 0,
                            "elevation": 0,
                            "flex": 1,
                            "overflow": "hidden",
                            "shadowColor": "#000",
                            "shadowOffset": {
                              "height": 0,
                              "width": 0,
                            },
                            "shadowOpacity": 0,
                            "shadowRadius": 0,
                          }
                        }
                        testID="icon-button-container"
                      >
                        <View
                          accessibilityComponentType="button"
                          accessibilityRole="button"
                          accessibilityState={
                            {
                              "busy": undefined,
                              "checked": undefined,
                              "disabled": true,
                              "expanded": undefined,
                              "selected": undefined,
                            }
                          }
                          accessibilityTraits="button"
                          accessibilityValue={
                            {
                              "max": undefined,
                              "min": undefined,
                              "now": undefined,
                              "text": undefined,
                            }
                          }
                          accessible={true}
                          centered={true}
                          collapsable={false}
                          focusable={true}
                          hitSlop={
                            {
                              "bottom": 6,
                              "left": 6,
                              "right": 6,
                              "top": 6,
                            }
                          }
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            [
                              {
                                "overflow": "hidden",
                              },
                              [
                                {
                                  "alignItems": "center",
                                  "flexGrow": 1,
                                  "justifyContent": "center",
                                },
                                {
                                  "borderRadius": 15.5,
                                },
                              ],
                            ]
                          }
                          testID="icon-button"
                        >
                          <Text
                            accessibilityElementsHidden={true}
                            allowFontScaling={false}
                            importantForAccessibility="no-hide-descendants"
                            pointerEvents="none"
                            selectable={false}
                            style={
                              [
                                {
                                  "color": "#ffd600",
                                  "fontSize": 15,
                                },
                                [
                                  {
                                    "lineHeight": 15,
                                    "transform": [
                                      {
                                        "scaleX": 1,
                                      },
                                    ],
                                  },
                                  {
                                    "backgroundColor": "transparent",
                                  },
                                ],
                                {
                                  "fontFamily": "Material Design Icons",
                                  "fontStyle": "normal",
                                  "fontWeight": "normal",
                                },
                                {},
                              ]
                            }
                          >
                            󰆉
                          </Text>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
